--- a/pom.xml
+++ b/pom.xml
@@ -88,6 +88,11 @@
             <version>4.5.0-M1</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
