--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     <name>app_corretores</name>
     <description>Projeto de apoio a gerenciamento de veículos e empréstimos a corretores</description>
     <properties>
-        <java.version>21</java.version>
+        <java.version>17</java.version>
     </properties>
     <dependencies>
         <dependency>
@@ -102,6 +102,14 @@
 
     <build>
         <plugins>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <skipTests>true</skipTests>
+                </configuration>
+            </plugin>
 
             <plugin>
                 <groupId>org.springframework.boot</groupId>
