--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,26 @@
 spring:
 
+  jpa:
+    show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
+
   profiles:
     active: dev
 
   application:
     name: app_corretores
+
+logging:
+  level:
+    org:
+      hibernate:
+        SQL: DEBUG
+        type:
+          descriptor:
+            sql:
+              BasicBinder: TRACE
 
 server:
   port: 8081
